@@ -1,3 +1,7 @@
+3/20/2005
+	- Fix several bugs in ResolverConfig on Windows.
+	  (Brian McBarron <bmcbarron@users.sourceforge.net>)
+
 3/15/2005
 	- Clean up the synchronization in the RRset class
 	  (reported by Daniel Jensen <daniel.jensen@savvis.net>)
